# zodiac

./: .gitignore  Cargo.toml  plan.txt  scratch.txt
examples/: Cargo.toml  README.md  basic.rs  ecs_world_viewer.rs
examples/hotloading/: rebuild-app-on-change.sh  run-app.sh
examples/hotloading/app/: Cargo.toml
examples/hotloading/app_runner/: Cargo.toml
examples/hotloading/app_state/: Cargo.toml
examples/zodiac_examples_basic/: Cargo.toml
examples/zodiac_examples_basic/src/: ecs_world_viewer.rs  first.rs  main.rs
src/: main.rs
zodiac/: Cargo.toml
zodiac/examples/: ecs_world_viewer.rs  first.rs
zodiac/src/: components.rs  formatting.rs  initialisation.rs  lib.rs  relationships.rs  rendering.rs  systems.rs  test_helpers.rs
zodiac/src/abstract_syntax/: world_building.rs
zodiac/src/components/: errors.rs  layout.rs  mod.rs  relationships.rs  resizing.rs  style.rs
zodiac/src/layout/: constraints.rs  events.rs  measurement.rs  mod.rs  positioning.rs  resizing.rs
zodiac/src/source/: building.rs  changes.rs  mod.rs  running.rs
zodiac/src/systems/: cleanup.rs  error_reporting.rs  events.rs  layout.rs  mapping.rs  maps.rs  measurement.rs  mod.rs  positioning.rs  relationships.rs  remove_entities.rs  rendering.rs  resizing.rs  running.rs  world_vision.rs
zodiac/src/testing/: components.rs  embedding.rs  mod.rs  rendering.rs  source.rs
zodiac/src/world_building/: abstract_syntax.rs  entities.rs  mod.rs
zodiac/tests/: build_errors.rs  imports.rs  layout.rs  lib.rs  relationships.rs  source.rs  systems.rs  text.rs
zodiac/tests/abstract_syntax/: mod.rs  world_building.rs  world_buildng.rs
zodiac/tests/systems/: layout.rs  maps.rs  measurement.rs  mod.rs  relationships.rs  rendering.rs
zodiac/tests/world_building/: abstract_syntax.rs  entities.rs  mod.rs
zodiac_examples/: Cargo.toml  build.rs
zodiac_examples/assets/test_zods/: app copy.zod  app.zod  app1.zod  app2.zod
zodiac_examples/src/: main.rs
zodiac_hotloading/: Cargo.toml
zodiac_hotloading/src/: application.rs  lib.rs  macros.rs  reloadable_libraries.rs
zodiac_html/: Cargo.toml  log.txt
zodiac_html/src/: borders.rs  colour.rs  components.rs  dimensions.rs  embedding.rs  events.rs  initialisation.rs  layout.rs  lib.rs  size.rs  style.rs  text.rs  window.rs
zodiac_html/src/borders/: colour.rs  mod.rs  radius.rs  styles.rs  width.rs
zodiac_html/src/layout/: boxing.rs  direction.rs  display.rs  margin.rs  mod.rs  padding.rs  tree.rs
zodiac_html/src/style/: embedding.rs  mod.rs  selectors.rs  tree.rs
zodiac_html/src/systems/: block.rs  borders.rs  display.rs  layout.rs  mod.rs  root_resize.rs  style.rs
zodiac_html/src/testing/: logging.rs  mod.rs  rendering.rs
zodiac_html/tests/: lib.rs
zodiac_html/tests/layout/: block.rs
zodiac_html/tests/rendering/: background.rs  borders.rs  mod.rs
zodiac_layout/: Cargo.toml
zodiac_layout/src/: cleanup.rs  constraints.rs  events.rs  initialisation.rs  lib.rs  measurement.rs  positioning.rs  relationships.rs  resizing.rs  text.rs
zodiac_layout/src/systems/: mapping.rs  measurement.rs  mod.rs  positioning.rs  relationships.rs  resizing.rs  text.rs
zodiac_layout/tests/: lib.rs  measurement.rs  positioning.rs  relationships.rs  resizing.rs  text.rs
zodiac_main/: Cargo.toml
zodiac_main/src/: main.rs
zodiac_main/test_zods/: test.zod
zodiac_rendering/: Cargo.toml
zodiac_rendering/src/: initialisation.rs  lib.rs  render_queue.rs  renderer.rs  rendering.rs
zodiac_rendering/src/systems/: events.rs  mod.rs  rendering.rs
zodiac_rendering_glium/: Cargo.toml
zodiac_rendering_glium/shaders/: colour_only_fragment_shader.glsl  fragment_shader.glsl  geometry_shader.glsl  vertex_shader.glsl
zodiac_rendering_glium/src/: components.rs  display.rs  embedding.rs  events.rs  fonts.rs  initialisation.rs  lib.rs  matrices.rs  primitives.rs  render_queue.rs  rendering.rs  shaders.rs  systems.rs
zodiac_rendering_glium/src/systems/: events.rs  mod.rs  render_primitives.rs  rendering.rs
zodiac_rendering_html_webrender/: Cargo.toml
zodiac_rendering_html_webrender/src/: borders.rs  colours.rs  components.rs  dimensions.rs  events.rs  initialisation.rs  lib.rs  notification.rs  render_primitive.rs  rendering.rs
zodiac_rendering_html_webrender/src/rendering/: mod.rs  renderer.rs  window.rs  window_renderer.rs
zodiac_rendering_html_webrender/src/systems/: events.rs  mod.rs  open_window.rs  queue_primitives.rs  render_primitives.rs
zodiac_rendering_pathfinder/: Cargo.toml
zodiac_rendering_pathfinder/src/: display.rs  embedding.rs  events.rs  initialisation.rs  lib.rs  render_queue.rs  rendering.rs
zodiac_rendering_pathfinder/src/systems/: events.rs  mod.rs  render_primitives.rs  rendering.rs
zodiac_rendering_webrender/: Cargo.toml
zodiac_rendering_webrender/src/: initialisation.rs
zodiac_rendering_zoml_glium/: Cargo.toml
zodiac_rendering_zoml_glium/shaders/: colour_only_fragment_shader.glsl  geometry_shader.glsl
zodiac_rendering_zoml_glium/src/: initialisation.rs  lib.rs  matrices.rs  primitives.rs  render_queue.rs  shaders.rs
zodiac_rendering_zoml_glium/src/systems/: events.rs  mod.rs  queue_primitives.rs  render_primitives.rs  rendering.rs
zodiac_resources/: Cargo.toml
zodiac_resources/src/: file_reading.rs  file_system.rs  folder_walking.rs  lib.rs  monitoring.rs  source_files.rs
zodiac_resources/src/systems/: cleanup.rs  mod.rs  source_build.rs  source_monitor.rs
zodiac_source/: Cargo.toml
zodiac_source/src/: building.rs  changes.rs  initialisation.rs  lib.rs  running.rs  source.rs
zodiac_source/src/application_state/: mod.rs  repository.rs  state.rs
zodiac_source_filesystem/: Cargo.toml
zodiac_source_filesystem/src/: file_reading.rs  folder_walking.rs  initialisation.rs  lib.rs  monitoring.rs  source_files.rs
zodiac_testing/: Cargo.toml
zodiac_testing/src/: components.rs  embedding.rs  lib.rs  rendering.rs
zodiac_testing/tests/: layout.rs  lib.rs  text.rs
zodiac_zoml/: Cargo.toml
zodiac_zoml/src/: components.rs  embedding.rs  initialisation.rs  lib.rs
zodiac_zoml/tests/: layout.rs
(+155 files in other folders)
