[package]
name = "zodiac"
version = "0.1.0"
authors = ["Chris Sampson <csampson@appliedsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotwatch = "0.4.5"
zodiac_parsing = {path = "crates/zodiac_parsing", version = "0.1.0"}
