[package]
name = "zodiac"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "*"
legion = "0.3.1"
serde_json = "1.0.64"
serde = "1.0.125"
shrev = "1.1.1"
zodiac_entities = {path = "../zodiac_entities", version = "0.1.0"}
zodiac_source = {path = "../zodiac_source", version = "0.1.0"}
zodiac_layout = {path = "../zodiac_layout", version = "0.1.0"}
zodiac_source_filesystem = {path = "../zodiac_source_filesystem", version = "0.1.0"}
zodiac_rendering = {path = "../zodiac_rendering", version = "0.1.0"}
zodiac_rendering_glium = {path = "../zodiac_rendering_glium", version = "0.1.0"}
zodiac_rendering_pathfinder = {path = "../zodiac_rendering_pathfinder", version = "0.1.0"}

[features]
default = ["pathfinder_rendering"]
glium_rendering = []
pathfinder_rendering = []