[package]
name = "zodiac"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
legion = "0.3.1"
serde = "1.0.125"
serde_json = "1.0.64"
pretty_env_logger = "*"
shrev = "1.1.1"
moxie = "*"
mox = "*"
topo = "*"
illicit = "*"
dyn-cache = "*"
paste = "1.0.5"
