[package]
name = "zodiac_examples"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zodiac = {path = "../zodiac", version = "0.1.0"}

[build-dependencies]
zodiac_resources_build = {path = "../zodiac_resources_build", version = "0.1.0"}
