[package]
name = "zodiac_hotloading"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
notify = "4.0.0"
zodiac = {path = "../zodiac", version = "0.1.0"}
