[package]
name = "zodiac_html"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = "1.0.125"
paste = "1.0.5"
moxie = "*"
mox = "*"
topo = "*"
illicit = "*"
legion = "0.3.1"
shrev = "1.1.1"
log4rs = "1.0"
zodiac = {path = "../zodiac", version = "0.1.0"}
