[package]
name = "zodiac_layout"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
legion = "0.3.1"
shrev = "1.1.1"
zodiac_entities = {path = "../zodiac_entities", version = "0.1.0"}
