[package]
name = "zodiac_main"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotwatch = "0.4.5"
zodiac_parsing = {path = "../zodiac_parsing", version = "0.1.0"}
zodiac_file_system = {path = "../zodiac_file_system", version = "0.1.0"}

