[package]
name = "zodiac_rendering"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.3.1"
shrev = "1.1.1"
log = "0.4.14"
zodiac = {path = "../zodiac", version = "0.1.0"}
