[package]
name = "zodiac_rendering_glium"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.3.1"
glium = "*"
image = "*"
zodiac_entities = {path = "../zodiac_entities", version = "0.1.0"}
zodiac_rendering = {path = "../zodiac_rendering", version = "0.1.0"}

[features]
default = []
render-quads_only = []
