[package]
name = "zodiac_rendering_glium"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
legion = "0.3.1"
glium = "*"
image = "*"
serde = "1.0.125"
zodiac_entities = {path = "../zodiac_entities", version = "0.1.0"}
zodiac_rendering = {path = "../zodiac_rendering", version = "0.1.0"}

[features]
default = ["no_font_image_load"]
render-quads_only = []
no_font_image_load = []
