[package]
name = "zodiac_rendering_html_webrender"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
legion = "0.3.1"
serde = "1.0.125"
winit = "0.21"
glium = "*"
gleam = "0.12.1"
glutin = "0.23"
shrev = "1.1.1"
paste = "1.0.5"
topo = "*"
illicit = "*"
moxie = "*"
zodiac = {path = "../zodiac", version = "0.1.0"}
zodiac_html = {path = "../zodiac_html", version = "0.1.0"}

[dependencies.webrender]
git = "https://github.com/servo/webrender.git"
rev = "fa736b9b4762a7de5de1ed6ede5c6e64d556c79d"
