[package]
name = "zodiac_rendering_glium_zoml"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
legion = "0.3.1"
glium = "*"
winit = "0.21"
glutin = "0.23"
image = "*"
serde = "1.0.125"
shrev = "1.1.1"
paste = "1.0.5"
topo = "*"
illicit = "*"
moxie = "*"
zodiac = {path = "../zodiac", version = "0.1.0"}
zodiac_zoml = {path = "../zodiac_zoml", version = "0.1.0"}

[features]
default = ["no_font_image_load"]
render-quads_only = []
no_font_image_load = []
