[package]
name = "zodiac_source"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
legion = "0.3.1"
shrev = "1.1.1"
moxie = "*"
mox = "*"
topo = "*"
illicit = "*"
dyn-cache = "*"
paste = "1.0.5"
zodiac_entities = {path = "../zodiac_entities", version = "0.1.0"}