[package]
name = "zodiac_source_filesystem"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zodiac_entities = {path = "../zodiac_entities", version = "0.1.0"}
zodiac_source = {path = "../zodiac_source", version = "0.1.0"}
legion = "0.3.1"
glob = "0.3.0"
notify = "4.0.15"
walkdir = "2"
path-clean = "0.1.0"
