[package]
name = "zodiac_testing"
version = "0.1.0"
authors = ["sammosampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "*"
legion = "0.3.1"
serde = "1.0.125"
shrev = "1.1.1"
mox = "*"
paste = "1.0.5"
topo = "*"
illicit = "*"
moxie = "*"
zodiac = {path = "../zodiac", version = "0.1.0"}
zodiac_layout = {path = "../zodiac_layout", version = "0.1.0"}
zodiac_rendering = {path = "../zodiac_rendering", version = "0.1.0"}
