[package]
name = "zodiac_zoml"
version = "0.1.0"
authors = ["Chris Sampson <csampson@appliedsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
paste = "1.0.5"
illicit = "*"
moxie = "*"
legion = "0.3.1"
shrev = "1.1.1"
zodiac = {path = "../zodiac", version = "0.1.0"}
