[package]
name = "zodiac_zoml"
version = "0.1.0"
authors = ["Chris Sampson <csampson@appliedsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = "1.0.125"
legion = "0.3.1"
paste = "1.0.5"
moxie = "*"
mox = "*"
topo = "*"
illicit = "*"
shrev = "1.1.1"
zodiac = {path = "../zodiac", version = "0.1.0"}
