[package]
name = "app"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
moxie = "*"
mox = "*"
topo = "*"
illicit = "*"
app_state = {path = "../app_state", version = "0.1.0"}
zodiac = {path = "../../../zodiac", version = "0.1.0"}
zodiac_hotloading = {path = "../../../zodiac_hotloading", version = "0.1.0"}
zodiac_rendering_glium = {path = "../../../zodiac_rendering_glium", version = "0.1.0"}
